# matrix_power

./: .gitignore  CODEOWNERS  conanfile.py
src/: CMakeLists.txt
src/matrix_power/: main.cpp  matrix.cpp  matrix.hpp
